--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       containers:
       - name: umeng
         image: image-tag-goes-here
-        imagePullPolicy: Always
+        # imagePullPolicy: Always
         resources:
           limits:
             cpu: "1"
